--- a/Solana_Faucet/package.json
+++ b/Solana_Faucet/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.95.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "sass": "^1.80.4"
   },
   "devDependencies": {
